Fix sidebar scrollbar not being clickable

--- a/src/resources/css/style_template.css
+++ b/src/resources/css/style_template.css
@@ -54,11 +54,13 @@ a#credits {
 .sidebar-content {
 	display: flex;
 	flex-direction: column;
+	position: relative;
 	max-width: 310px;
 	max-height: 450px;
 	padding: 0.25em 0.75em 0.75em;
 	font-size: 15px;
 	overflow-y: auto;
+	z-index: 150;
 }
 
 .sidebar-content h1,
